--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,43 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.9"
+contourpy = "1.0.7"
+cycler = "0.11.0"
+dill = "0.3.6"
+fast-histogram = "0.11"
+fonttools = "4.38.0"
+joblib = "1.2.0"
+kiwisolver = "1.4.4"
+matplotlib = "3.6.3"
+mizani = "0.8.1"
+mpire = "2.6.0"
+mpl-scatter-density = "0.7"
+multiprocess = "0.70.14"
+numpy = "1.24.1"
+oyaml = "1.0"
+packaging = "23.0"
+palettable = "3.3.0"
+pandas = "1.5.2"
+patsy = "0.5.3"
+pillow = "9.4.0"
+plotnine = "0.10.1"
+pydot = "1.4.2"
+pygments = "2.14.0"
+pyparsing = "3.0.9"
+python-dateutil = "2.8.2"
+pytz = "2022.7.1"
+pyyaml = "6.0"
+ruamel-yaml = "0.17.21"
+ruamel-yaml-clib = "0.2.7"
+scikit-learn = "1.2.0"
+simpy = "4.0.1"
+six = "1.16.0"
+statsmodels = "0.13.5"
+threadpoolctl = "3.1.0"
+tqdm = "4.64.1"
+jupyter = "1.0.0"
+jupyterlab = "3.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
