--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ threadpoolctl = "3.1.0"
 tqdm = "4.64.1"
 jupyter = "1.0.0"
 jupyterlab = "3.5.2"
+seaborn = "0.12.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
